@@ -68,6 +68,7 @@ x added: `$PATCH(schema, model, [options], callback, [controller])` method
 x added: `.env` parser to `process.env`
 x added: `String.parseENV()` for parsing `.env` syntax
 x added: `$.noop()` for custom responses
+- added: `$ACTION(schemaroute, [model], callback, [controller])` evaluates schema
 
 x updated: `$.invalid()` without arguments can return a function `function(err)`
 x updated: Mail `unsubscribe` appends new header which enables `unsubscribe` in e.g. iOS
